# bevy-detective-game

./: .gitignore  Cargo.toml  README.md
assets/dialogs/: first_dialog.yarn  librarian1_dialog.yarn  railwayman_dialog.yarn  test_dialog.yarn
assets/grammar/: yarnspinner.pest
assets/quests/: chapter1.quest
assets/rive/: combination_lock.riv  main_menu.riv
assets/shaders/: fog.wgsl
audacity/: Comics1Page3.aup3
src/: comics_state.rs  game_items.rs  game_levels.rs  game_npc.rs  game_state.rs  in_game_state.rs  intro_state.rs  level_state.rs  main.rs
src/animation/: components.rs  mod.rs  systems.rs
src/assets/: asset_loading_monitor.rs  fonts.rs  mod.rs
src/clickable/: components.rs  mod.rs  systems.rs
src/clickable/items/: behaviour.rs  components.rs  event_handler.rs  mod.rs  onesideitem.rs  (+4 more)
src/comics/: components.rs  config.rs  mod.rs  systems.rs
src/conditional_visibility/: components.rs  mod.rs  systems.rs
src/dialogs/: mod.rs
src/event_journal/: components.rs  mod.rs  system.rs
src/game/: mod.rs  yarn_functions.rs
src/global_state/: global_state.rs  mod.rs  systems.rs
src/intro/: mod.rs  systems.rs
src/inventory/: components.rs
src/keyboard/: mod.rs  system.rs
src/levels/: components.rs  constants.rs  mod.rs  resource.rs  systems.rs
src/main_menu/: components.rs  mod.rs  systems.rs
src/materials/: fog.rs  mod.rs
src/movement/: mod.rs
src/npc/: components.rs  mod.rs  resource.rs  systems.rs
src/parsing/: mod.rs
src/player/: components.rs  constants.rs  mod.rs  systems.rs
src/quests/: components.rs  mod.rs  systems.rs
src/sound/: components.rs  mod.rs  systems.rs
src/spawnable/: components.rs
src/text/: mod.rs
src/ui/: components.rs  mod.rs  systems.rs
(+76 files in other folders)
