[package]
name = "bevy-detective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
pest = "2.7.3"
pest_derive = "2.7.3"
rand = "0.8.5"
buildstructor = "*"
lazy_static = "1.4.0"
rive-bevy = { git = "https://github.com/rive-app/rive-bevy" }

bevy-detective_derive = { path = "bevy-detective_derive" }