[package]
name = "bevy-detective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
pest = "2.7.3"
pest_derive = "2.7.5"
rand = "0.8.5"
buildstructor = "*"
lazy_static = "1.4.0"
rive-bevy = { git = "https://github.com/rive-app/rive-bevy" }
bevy-yarnspinner = { path = "../bevy-yarnspinner" }
noise = "0.8.2"
thiserror = "1.0.51"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

bevy-detective_derive = { path = "bevy-detective_derive" }